--- a/src/assets/css/global-style.scss
+++ b/src/assets/css/global-style.scss
@@ -15,3 +15,12 @@ body {
   clear: both;
   visibility: hidden;
 }
+
+.iconfont {
+  width: 1.125em;
+  height: 1.125em;
+  vertical-align: middle;
+  fill: currentColor;
+  overflow: hidden;
+  padding: 0 4px;
+}
